# cifar

./: .pylintrc  README.md  pyproject.toml
cifar/: model.py  start.py
cifar/model_utils/: attention_modules.py  custom_layers.py  involution.py
cifar/trainer/: combined_trainer.py
cifar/utils/: callbacks.py  generator.py  losses.py
repo/: requirements.txt
tests/: test_generator.py  test_model_train.py
